2008-05-27  Martyn Russell  <martyn@imendio.com>

	* src/libtracker-common/Makefile.am:
	* src/libtracker-db/Makefile.am:
	* src/libtracker-db/tracker-db-interface.[ch]:
	* src/libtracker-db/tracker-db-manager.[ch]:
	* src/trackerd/Makefile.am:
	* src/trackerd/tracker-db-sqlite.c:
	* src/trackerd/tracker-indexer.c:
	* src/trackerd/tracker-main.c: Moved the tracker-db-manager.[ch]
	over to libtracker-db and improved some parts of it.

2008-05-27  Martyn Russell  <martyn@imendio.com>

	* src/libtracker-common/Makefile.am:
	* src/libtracker-common/tracker-hal.[ch]:
	* src/libtracker-common/tracker-ontology.[ch]:
	* src/libtracker-common/tracker-parser.[ch]:
	* src/libtracker-common/tracker-service.[ch]:
	* src/libtracker-common/tracker-field.[ch]:
	* src/libtracker-common/tracker-field-data.[ch]:
	* src/tracker-indexer/Makefile.am:
	* src/trackerd/Makefile.am:
	* src/trackerd/tracker-db-email.c:
	* src/trackerd/tracker-db-sqlite.[ch]:
	* src/trackerd/tracker-db.c:
	* src/trackerd/tracker-dbus-files.c:
	* src/trackerd/tracker-dbus-metadata.c:
	* src/trackerd/tracker-dbus-search.c:
	* src/trackerd/tracker-dbus-xesam.c:
	* src/trackerd/tracker-indexer.c:
	* src/trackerd/tracker-main.[ch]:
	* src/trackerd/tracker-metadata.c:
	* src/trackerd/tracker-process-files.c:
	* src/trackerd/tracker-query-tree.c:
	* src/trackerd/tracker-xesam-ontology.[ch]:
	* src/trackerd/tracker-xesam-query.c: Moved tracker-hal,
	tracker-ontology, tracker-service, tracker-parser, tracker-field
	and tracker-field-data modules to libtracker-common because they
	are shared by the indexer and the daemon.

2008-05-27  Philip Van Hoof  <pvanhoof@gnome.org>

        * Merged indexer-split with xesam-support
	 svn merge -r 1481:1495 ../xesam-support

2008-05-26  Carlos Garnacho  <carlos@imendio.com>

	* src/tracker-indexer/tracker-ontology.[ch]:
	* src/tracker-indexer/tracker-service.[ch]:
	* src/tracker-indexer/tracker-field.[ch]: Copied here meanwhile we
	decide where should they go.
